style(frontend): Update Therapy React component to improve display behavior - Add bootstrap margin bottom to the row containing therapy image and description, to create space between itself and the card below - Set to 0 therapy description margin bottom, to avoid adding extra space - Add a padding top to the therapy image (this will align better the image with the text on its right side) and a margin bottom for the screen size up to 576 px (this will create an appropriate space below image on small screens)

--- a/frontend/react-heal-naturalis/src/layouts/Therapy/Therapy.css
+++ b/frontend/react-heal-naturalis/src/layouts/Therapy/Therapy.css
@@ -8,6 +8,7 @@
 .therapy-description {
     line-height: 1.7;
     text-align: justify;
+    margin-bottom: 0;
 }
 
 .therapy-phone,
@@ -32,6 +33,8 @@
 
 .therapy-image {
     width: 100%;
+    margin-bottom: 0.7rem;
+    padding-top: 0.5rem;
 }
 
 .therapy-phone a {
@@ -68,6 +71,7 @@
 @media (min-width: 576px) {
     .therapy-image {
         max-width: 75%;
+        margin-bottom: 0;
     }
     .therapy-phone a {
         font-size: 1.5rem;
@@ -85,6 +89,6 @@
 
 @media (min-width: 992px) {
     .therapy-image {
-        max-width: 40%;
+        max-width: 37%;
     }
 }
